--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
-    "@tabler/icons-react": "^3.24.0",
+    "@tabler/icons-react": "^3.26.0",
     "axios": "^1.7.9",
     "next": "14.0.4",
     "react": "^18",
@@ -18,7 +18,10 @@
     "react-dom": "^18",
     "react-redux": "^9.2.0",
     "react-toastify": "^10.0.6",
-    "tabler-icons-react": "^1.56.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1",
+    "tabler-icons-react": "^1.56.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^20",
