--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "@tabler/icons-react": "^3.26.0",
     "axios": "^1.7.9",
+    "firebase": "^11.2.0",
     "next": "14.0.4",
     "react": "^18",
     "react-card-flip": "^1.2.3",
@@ -19,7 +20,6 @@
     "react-redux": "^9.2.0",
     "react-toastify": "^10.0.6",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.8.1",
     "tabler-icons-react": "^1.56.0",
     "xlsx": "^0.18.5"
   },
